--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<fieldset><title>JThhhhhh's Website Online</title></fieldset>
+<title>JThhhhhh's Website Online</title>
 
 <h1><b>JThhhhhh</b></h1>
 <br><br>
