--- a/about.html
+++ b/about.html
@@ -35,14 +35,27 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure quasi quaerat atque in commodi beatae iste libero aliquid? Cupiditate, asperiores! Labore veritatis totam numquam eius sit corrupti, saepe commodi libero.
         Lorem ipsum dolor sit amet consectetur adi
         pisicing elit. Iure quasi quaerat atque in commodi beatae iste libero aliquid? Cupiditate, asperiores! Labore veritatis totam numquam eius sit corrupti, saepe commodi libero.
-        elit. Iure quasi quaerat atque in commodi beatae iste libero aliquid? Cupiditate, asperiores! Labore veritatis totam numquam eius sit corrupti, saepe commodi libero.
+        elit. Iure quasi quaerat atque in commodi beatae iste libero aliquid? Cupidit
+        ate, asperiores! Labore veritatis totam numquam eius sit corrupti, saepe commodi l
+        ectetur adipisicing elit. Iure quasi quaerat atque in commodi beatae iste libero aliquid? Cupiditate, asperiores! Labore veritatis totam numquam eius sit corrupti, saepe commodi libero.
+        Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure quasi quaerat atque in commodi beatae iste libero aliquid? Cupiditate, asperiores! Labore veritatis totam numquam eius sit corrupti, saepe commodi libero.
+        consectetur adipisicing elit. Iure 
+        quasi quaerat atque in commodi beatae iste libero aliquid? Cupiditate, asperiores! Labore veritatis totam numquam eius sit corrupti, saepe commodi libero.
+        Lorem ipsum dohgdnlor sit amet consectetur adipi
+        sicing Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure quasi quaerat atque in commodi beatae iste libero aliquid? Cupiditate, asperiores! Labore veritatis totam numquam eius sit corrupti, saepe commodi libero.
+        Lorem ipsum dolor sit amet consectetuhhhhhhr adLorem ipsum dolor sit amet consectetur adipisicing elit. Iure quasi quaerat atque in commodi beatae iste libero aliquid? Cupiditate, asperiores! Labore veritatis totam numquam eius sit corrupti, saepe commodi libero.
+        ipisicing elit. Iure quasi quaerat atque in commodi beatae iste libero aliquid? Cupiditate, asperiores! Labore veritatis totam numquam eius sit corrupti, saepe commodi libero.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure quasi quaerat atque in commodi beatae iste libero aliquid? Cupiditate, asperiores! Labore veritatis totam numquam eius sit corrupti, saepe commodi libero.
+        Lorem ipsum dolor sit amet consectetur adi
+        pisicing elit. Iure quasi quaerat atque in commodi beatae iste libero aliquid? Cupiditate, asperiores! Labore veritatis totam numquam eius sit corrupti, saepe commodi libero.
+        elit. Iure quasi quaerat atque in commodi beatae iste libero aliquid? Cupiditibero.
 
 
 
     </p>
 
 
-    <fieldset><h4 style="color: white;"> Jeremy Torrez's Website</h4></fieldset>
+    <fieldset> <p style="color: white;"> <b><i>Jeremy Torrez's Website</b></i></p></fieldset>
 
 </body>
 </html>
