--- a/car.html
+++ b/car.html
@@ -67,15 +67,14 @@
     <img src="p90462503-1652716131.jpeg" alt="" height="340">
     <h3 style="color: white;">
         <p>
-        The 340i is a very sporty luxe mid size sedan. It has a Turbo 3.5L V6. It shares the same engine and chasis with the new Toyota Supra.
+        The m340i is a very sporty luxe mid size sedan. It has a Turbo 3.5L V6. It shares the same engine and chasis with the new Toyota Supra.
         It is a nice option for a fast sedan that is cheaper than the M3.
         </p>
     </h3>
     <img src="B5-900x506.jpg" alt="" height="300">
 
 
-    <fieldset><h4 style="color: white;"> Jeremy Torrez's Website</h4></fieldset>
-
+    <fieldset> <p style="color: white;"> <b><i>Jeremy Torrez's Website</b></i></p></fieldset>
     
 
     
