--- a/car.html
+++ b/car.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>German Cars</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body style="background-color: rgb(0, 0, 0);"></body>
 <h1 style="color: rgb(255, 255, 255);"> <fieldset> Germanys Best Cars </fieldset></h1> 
