--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 
 
 </head>
-<body style="background-color: black;"> 
+<body>
     
-    <h1 style="color: rgb(255, 255, 255);"> <fieldset> <b>Germany's Best Cars Home</b> </fieldset></h1> 
+    <h1 style="color: ;"> <fieldset> <b>Germany's Best Cars Home</b> </fieldset></h1> 
     <h1>f</h1>
     <table bgcolor="white">
-        <tr bgcolor="black" align="center">
+        <tr bgcolor="darkslateblue" align="center">
 
             <td>
 
